<?xml version="1.0"?>
<package format="3">
  <name>maze_solver_bringup</name>
  <version>0.1.0</version>
  <description>Launch and integration package for the predictive maze solver.</description>
  <maintainer email="systems.architect@example.com">Systems Architect</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>launch</depend>
  <depend>launch_ros</depend>
  <depend>maze_solver_description</depend>
  <depend>maze_solver_diagnostics</depend>
  <depend>maze_solver_interfaces</depend>
  <depend>maze_solver_logic</depend>
  <depend>maze_solver_perception</depend>

  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>xacro</exec_depend>

  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
