<?xml version="1.0"?>
<package format="3">
  <name>maze_solver_description</name>
  <version>0.1.0</version>
  <description>Robot description and RViz assets for the predictive maze solver.</description>
  <maintainer email="systems.architect@example.com">Systems Architect</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
