<?xml version="1.0"?>
<package format="3">
  <name>maze_solver_diagnostics</name>
  <version>0.1.0</version>
  <description>Diagnostics and performance logging for the maze solver.</description>
  <maintainer email="systems.architect@example.com">Systems Architect</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>maze_solver_interfaces</depend>
  <depend>nav_msgs</depend>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>

  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
