<?xml version="1.0"?>
<package format="3">
  <name>maze_solver_logic</name>
  <version>0.1.0</version>
  <description>Predictive wall-following logic and velocity control for a maze solver.</description>
  <maintainer email="systems.architect@example.com">Systems Architect</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
